📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -2742,5 +2742,93 @@
         "published": "Mon, 08 Dec 2025 21:27:42 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46197875\">Comments</a>"
+    },
+    {
+        "id": "https://www.theverge.com/21289209/best-apple-watch-deals",
+        "title": "Here are the best Apple Watch deals available right now",
+        "link": "https://www.theverge.com/21289209/best-apple-watch-deals",
+        "published": "2025-12-08T18:39:26-05:00",
+        "source": "The Verge",
+        "summary": "Apple recently launched its latest fleet of smartwatches, including the Apple Watch Series 11, the SE 3, and the Ultra 3. Each wearable offers something a little different (their prices indicate their breadth of features), and we\u2019re already starting to see big price drops. Additionally, we\u2019re still recommending some recent predecessors in Apple\u2019s portfolio, including [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/tech/625409/best-robot-vacuum-mops",
+        "title": "The best robot vacuum and mop to buy right now",
+        "link": "https://www.theverge.com/tech/625409/best-robot-vacuum-mops",
+        "published": "2025-12-08T18:15:36-05:00",
+        "source": "The Verge",
+        "summary": "Robot vacuums that can both mop and sweep your floors have improved significantly in recent years. While they are still not as effective as good ol\u2019 manual labor, if you run them regularly, they will help keep your floors cleaner with much less effort on your part. The difference is that newer \u201ccombo\u201d robot vacuum [&#8230;]"
+    },
+    {
+        "id": "https://www.engadget.com/entertainment/tv-movies/letterboxd-video-stores-first-film-rentals-will-be-available-this-week-235426596.html?src=rss",
+        "title": "Letterboxd Video Store's first film rentals will be available this week",
+        "link": "https://www.engadget.com/entertainment/tv-movies/letterboxd-video-stores-first-film-rentals-will-be-available-this-week-235426596.html?src=rss",
+        "published": "Mon, 08 Dec 2025 23:54:26 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Letterboxd has <a class=\"link\" href=\"https://letterboxd.com/journal/letterboxd-video-store-unreleased-gems-december-2025/\" target=\"_blank\">introduced</a> its first wave of exclusive digital film rentals for the company\u2019s previously <a class=\"link\" href=\"https://www.engadget.com/entertainment/tv-movies/letterboxd-will-start-renting-movies-in-december-214900026.html\" target=\"_blank\">announced</a> Letterboxd Video Store. The inaugural collection is themed Unreleased Gems and includes four movies"
+    },
+    {
+        "id": "https://www.engadget.com/big-tech/congress-removes-right-to-repair-language-from-2026-defense-bill-231708835.html?src=rss",
+        "title": "Congress removes right to repair language from 2026 defense bill",
+        "link": "https://www.engadget.com/big-tech/congress-removes-right-to-repair-language-from-2026-defense-bill-231708835.html?src=rss",
+        "published": "Mon, 08 Dec 2025 23:17:08 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>According to a <a class=\"link\" href=\"https://pirg.org/media-center/statement-congress-strips-bipartisan-military-right-to-repair-provisions-from-defense-bill/\" target=\"_blank\">statement</a> from the Public Interest Research Group, the National Defense Authorization Act for Fiscal Year 2026 has removed language that would have granted the US military the right to repair its own equipment rather than requiring it to use official defense contractors for maintenance. This bill is still being cons"
+    },
+    {
+        "id": "https://gizmodo.com/trump-says-nvidia-can-sell-the-h200-chip-to-china-2000697013",
+        "title": "Trump Says Nvidia Can Sell the H200 Chip to China",
+        "link": "https://gizmodo.com/trump-says-nvidia-can-sell-the-h200-chip-to-china-2000697013",
+        "published": "Mon, 08 Dec 2025 23:58:49 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"Nvidia CEO Jensen Huang (R) speaks alongside US President Donald Trump at the White House in Washington, DC, on April 30, 2025.\" class=\"attachment-full size-full wp-post-image\" height=\"1280\" src=\"https://gizmodo.com/app/uploads/2025/12/trump-nvidia-jensen-huang.jpg\" width=\"1920\" /><br /><br />The U.S government will take a 25% cut, according to the president."
+    },
+    {
+        "id": "https://mashable.com/article/palantir-ceo-neurodivergent",
+        "title": "Palantir responds to criticism of CEO interview with neurodivergent fellowship",
+        "link": "https://mashable.com/article/palantir-ceo-neurodivergent",
+        "published": "Mon, 08 Dec 2025 23:22:26 +0000",
+        "source": "Mashable",
+        "summary": "Palantir CEO Alex Karp will conduct final interviews for a recently announced neurodivergent fellowship."
+    },
+    {
+        "id": "https://mashable.com/article/trump-ai-executive-order",
+        "title": "Trump to sign order prohibiting state AI regulation",
+        "link": "https://mashable.com/article/trump-ai-executive-order",
+        "published": "Mon, 08 Dec 2025 23:16:56 +0000",
+        "source": "Mashable",
+        "summary": "Trump vows to sign AI executive order this week."
+    },
+    {
+        "id": "https://mashable.com/article/dec-8-pok-pok-lifetime-subscription",
+        "title": "Give kids calm and educational screen time for life with this $40 app",
+        "link": "https://mashable.com/article/dec-8-pok-pok-lifetime-subscription",
+        "published": "Mon, 08 Dec 2025 23:00:00 +0000",
+        "source": "Mashable",
+        "summary": "Give your kids non-addictive, educational, and fun screen time with a lifetime subscription to the app Pok Pok, now just  $39.97 (reg. $250) with code PLAY20 through Dec. 14."
+    },
+    {
+        "id": "https://www.grocerydive.com/news/kroger-ocado-close-automated-fulfillment-centers-robotics-grocery-ecommerce/805931/",
+        "title": "Kroger acknowledges that its bet on robotics went too far",
+        "link": "https://www.grocerydive.com/news/kroger-ocado-close-automated-fulfillment-centers-robotics-grocery-ecommerce/805931/",
+        "published": "Mon, 08 Dec 2025 23:53:52 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46199411\">Comments</a>"
+    },
+    {
+        "id": "https://blog.jim-nielsen.com/2025/icons-in-menus/",
+        "title": "Icons in Menus Everywhere \u2013 Send Help",
+        "link": "https://blog.jim-nielsen.com/2025/icons-in-menus/",
+        "published": "Mon, 08 Dec 2025 19:44:00 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46196688\">Comments</a>"
+    },
+    {
+        "id": "https://arxiv.org/abs/2512.05117",
+        "title": "The Universal Weight Subspace Hypothesis",
+        "link": "https://arxiv.org/abs/2512.05117",
+        "published": "Tue, 09 Dec 2025 00:16:46 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46199623\">Comments</a>"
     }
 ]
