📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -2830,5 +2830,29 @@
         "published": "Tue, 09 Dec 2025 00:16:46 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46199623\">Comments</a>"
+    },
+    {
+        "id": "https://www.zdnet.com/article/which-hdmi-port-to-use-tv/",
+        "title": "Does it matter which HDMI port you use on your TV? Short answer: Yes",
+        "link": "https://www.zdnet.com/article/which-hdmi-port-to-use-tv/",
+        "published": "Tue, 09 Dec 2025 02:00:31 GMT",
+        "source": "Latest news",
+        "summary": "You may be missing out on optimal performance or sound. Here's how to check."
+    },
+    {
+        "id": "https://andyljones.com/posts/horses.html",
+        "title": "Horses: AI progress is steady. Human equivalence is sudden",
+        "link": "https://andyljones.com/posts/horses.html",
+        "published": "Tue, 09 Dec 2025 00:26:35 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46199723\">Comments</a>"
+    },
+    {
+        "id": "https://www.untappedcities.com/automats-cafeterias-nyc/",
+        "title": "The Lost Machine Automats and Self-Service Cafeterias of NYC (2023)",
+        "link": "https://www.untappedcities.com/automats-cafeterias-nyc/",
+        "published": "Tue, 09 Dec 2025 00:51:31 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46199950\">Comments</a>"
     }
 ]
