📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -2854,5 +2854,45 @@
         "published": "Tue, 09 Dec 2025 00:51:31 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46199950\">Comments</a>"
+    },
+    {
+        "id": "https://mashable.com/article/nyt-connections-sports-edition-hint-answer-today-december-9-2025",
+        "title": "NYT Connections Sports Edition today: Hints and answers for December 9, 2025",
+        "link": "https://mashable.com/article/nyt-connections-sports-edition-hint-answer-today-december-9-2025",
+        "published": "Tue, 09 Dec 2025 03:00:00 +0000",
+        "source": "Mashable",
+        "summary": "Connections: Sports Edition is a New York Times word game about finding common sports threads between words. How to solve the day's puzzle."
+    },
+    {
+        "id": "https://mashable.com/article/nyt-connections-hint-answer-today-december-9-2025",
+        "title": "NYT Connections hints today: Clues, answers for December 9, 2025",
+        "link": "https://mashable.com/article/nyt-connections-hint-answer-today-december-9-2025",
+        "published": "Tue, 09 Dec 2025 03:00:00 +0000",
+        "source": "Mashable",
+        "summary": "Connections is a New York Times word game that's all about finding the \"common threads between words.\" How to solve the puzzle."
+    },
+    {
+        "id": "https://mashable.com/article/strands-nyt-hint-december-9-2025-clone",
+        "title": "NYT Strands hints, answers for December 9, 2025",
+        "link": "https://mashable.com/article/strands-nyt-hint-december-9-2025-clone",
+        "published": "Tue, 09 Dec 2025 03:00:00 +0000",
+        "source": "Mashable",
+        "summary": "The NYT Strands hints and answers you need to make the most of your puzzling experience."
+    },
+    {
+        "id": "https://mashable.com/article/wordle-today-answer-december-9-2025",
+        "title": "Wordle today: Answer, hints for December 9, 2025",
+        "link": "https://mashable.com/article/wordle-today-answer-december-9-2025",
+        "published": "Tue, 09 Dec 2025 03:00:00 +0000",
+        "source": "Mashable",
+        "summary": "Here's the answer for \"Wordle\" #1633 on December 9 as well as a few hints, tips, and clues to help you solve it yourself."
+    },
+    {
+        "id": "https://www.zdnet.com/article/transfer-spotify-playlists-to-apple-music/",
+        "title": "This iOS 26 feature cements Apple Music as my top streaming service (as an ex-Spotify user)",
+        "link": "https://www.zdnet.com/article/transfer-spotify-playlists-to-apple-music/",
+        "published": "Tue, 09 Dec 2025 03:00:33 GMT",
+        "source": "Latest news",
+        "summary": "A feature hidden in your iPhone settings offers a solution to one of the most challenging aspects of switching music streaming services."
     }
 ]
