📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -2910,5 +2910,13 @@
         "published": "Thu, 04 Dec 2025 14:45:10 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46148202\">Comments</a>"
+    },
+    {
+        "id": "https://withdocket.com",
+        "title": "Show HN: I built a system for active note-taking in regular meetings like 1-1s",
+        "link": "https://withdocket.com",
+        "published": "Mon, 08 Dec 2025 22:21:26 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46198430\">Comments</a>"
     }
 ]
