📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -2918,5 +2918,69 @@
         "published": "Mon, 08 Dec 2025 22:21:26 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46198430\">Comments</a>"
+    },
+    {
+        "id": "https://www.wired.com/story/exclusive-kitchenaid-promo-code/",
+        "title": "KitchenAid Promo Code: 30% Off in December 2025",
+        "link": "https://www.wired.com/story/exclusive-kitchenaid-promo-code/",
+        "published": "Tue, 09 Dec 2025 06:00:00 +0000",
+        "source": "WIRED",
+        "summary": "Save on every purchase with top KitchenAid coupons from WIRED, including up to 30% off select countertop appliances."
+    },
+    {
+        "id": "https://www.wired.com/story/verizon-promo-code/",
+        "title": "50% Off Verizon Promo Codes | December 2025",
+        "link": "https://www.wired.com/story/verizon-promo-code/",
+        "published": "Tue, 09 Dec 2025 06:00:00 +0000",
+        "source": "WIRED",
+        "summary": "Save with Verizon coupon codes for $1,100 off Galaxy S25 phones, free iPhone 17 Pros, and up to 50% off plans."
+    },
+    {
+        "id": "https://mashable.com/article/africa-cup-of-nations-2025-live-stream-for-free",
+        "title": "How to watch the 2025 Africa Cup of Nations online for free",
+        "link": "https://mashable.com/article/africa-cup-of-nations-2025-live-stream-for-free",
+        "published": "Tue, 09 Dec 2025 05:00:00 +0000",
+        "source": "Mashable",
+        "summary": "How to watch Africa Cup of Nations for free. Live stream the 2025 Africa Cup of Nations for free from anywhere in the world."
+    },
+    {
+        "id": "https://mashable.com/article/atalanta-chelsea-champions-league-2025-live-stream-for-free",
+        "title": "How to watch Atalanta vs. Chelsea online for free",
+        "link": "https://mashable.com/article/atalanta-chelsea-champions-league-2025-live-stream-for-free",
+        "published": "Tue, 09 Dec 2025 05:00:00 +0000",
+        "source": "Mashable",
+        "summary": "How to watch Champions League for free. Live stream Atalanta vs. Chelsea in the Champions League for free."
+    },
+    {
+        "id": "https://mashable.com/article/bayern-munich-sporting-champions-league-2025-live-stream-for-free",
+        "title": "How to watch Bayern Munich vs. Sporting online for free",
+        "link": "https://mashable.com/article/bayern-munich-sporting-champions-league-2025-live-stream-for-free",
+        "published": "Tue, 09 Dec 2025 05:00:00 +0000",
+        "source": "Mashable",
+        "summary": "How to watch Champions League for free. Live stream Bayern Munich vs. Sporting in the Champions League for free."
+    },
+    {
+        "id": "https://mashable.com/article/inter-milan-liverpool-2025-champions-league-live-stream-for-free",
+        "title": "How to watch Inter Milan vs. Liverpool online for free",
+        "link": "https://mashable.com/article/inter-milan-liverpool-2025-champions-league-live-stream-for-free",
+        "published": "Tue, 09 Dec 2025 05:00:00 +0000",
+        "source": "Mashable",
+        "summary": "How to watch the Champions League for free. Watch Inter Milan vs. Liverpool in the Champions League for free from anywhere in the world."
+    },
+    {
+        "id": "https://mashable.com/article/moon-phase-today-dec-9",
+        "title": "Moon phase today: What the moon will look like on December 9",
+        "link": "https://mashable.com/article/moon-phase-today-dec-9",
+        "published": "Tue, 09 Dec 2025 05:00:00 +0000",
+        "source": "Mashable",
+        "summary": "See the moon phase expected for December 9, 2025 as well as when the next full moon is expected."
+    },
+    {
+        "id": "https://walkman.land/modern",
+        "title": "Modern Walkmans",
+        "link": "https://walkman.land/modern",
+        "published": "Tue, 09 Dec 2025 04:57:53 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46201381\">Comments</a>"
     }
 ]
