📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -2982,5 +2982,45 @@
         "published": "Tue, 09 Dec 2025 04:57:53 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46201381\">Comments</a>"
+    },
+    {
+        "id": "https://www.wired.com/story/chewy-promo-code/",
+        "title": "50% Off Chewy Promo Code | December 2025",
+        "link": "https://www.wired.com/story/chewy-promo-code/",
+        "published": "Tue, 09 Dec 2025 06:30:00 +0000",
+        "source": "WIRED",
+        "summary": "Explore Chewy coupon codes for 20% off pet food with holiday deals, a free $30 gift card, buy 2 get 1 free offers and more."
+    },
+    {
+        "id": "https://www.wired.com/story/dell-coupon-code/",
+        "title": "Dell Coupon Codes: 10% Off | December 2025",
+        "link": "https://www.wired.com/story/dell-coupon-code/",
+        "published": "Tue, 09 Dec 2025 06:30:00 +0000",
+        "source": "WIRED",
+        "summary": "Get 10% off with verified Dell promo code, plus today\u2019s coupons for up to $600 off laptops, Alienware monitors, and all things tech."
+    },
+    {
+        "id": "https://www.wired.com/story/visible-promo-code/",
+        "title": "Visible Promo Code: Save $400 in December 2025",
+        "link": "https://www.wired.com/story/visible-promo-code/",
+        "published": "Tue, 09 Dec 2025 06:20:00 +0000",
+        "source": "WIRED",
+        "summary": "Find great deals and promo codes for Visible at WIRED and save big, whether you're a long-time customer or a newbie."
+    },
+    {
+        "id": "https://www.wired.com/story/logitech-promo-code/",
+        "title": "Logitech Promo Codes and Deals: Up to 50% Off This Holiday Season",
+        "link": "https://www.wired.com/story/logitech-promo-code/",
+        "published": "Tue, 09 Dec 2025 06:10:00 +0000",
+        "source": "WIRED",
+        "summary": "Score up to 50% off headsets, keyboards, and more at the Logitech Holiday Sale taking place this month."
+    },
+    {
+        "id": "https://type.today/en/journal/spaces",
+        "title": "Manual: Spaces",
+        "link": "https://type.today/en/journal/spaces",
+        "published": "Tue, 09 Dec 2025 00:07:42 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46199530\">Comments</a>"
     }
 ]
