📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -3022,5 +3022,29 @@
         "published": "Tue, 09 Dec 2025 00:07:42 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46199530\">Comments</a>"
+    },
+    {
+        "id": "https://www.theverge.com/news/839481/fairphone-xl-wireless-headphones-repairable-modular",
+        "title": "You can put the best part of Fairphone&#8217;s new headphones into the older model",
+        "link": "https://www.theverge.com/news/839481/fairphone-xl-wireless-headphones-repairable-modular",
+        "published": "2025-12-09T03:00:00-05:00",
+        "source": "The Verge",
+        "summary": "Over two years after Fairphone introduced its first pair of modular and repairable wireless headphones, the company has announced an upgraded version. The new Fairbuds XL look similar to the originals but feature an updated design with more comfortable fabrics and improved sound thanks to new drivers. What's most interesting about these is that thanks [&#8230;]"
+    },
+    {
+        "id": "https://www.engadget.com/audio/fairphone-updates-its-over-ear-headphones-with-better-sound-080000773.html?src=rss",
+        "title": "Fairphone updates its over ear headphones with better sound",
+        "link": "https://www.engadget.com/audio/fairphone-updates-its-over-ear-headphones-with-better-sound-080000773.html?src=rss",
+        "published": "Tue, 09 Dec 2025 08:00:00 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Two years ago, <a class=\"link\" href=\"https://www.engadget.com/mobile/fairphone-6-lands-a-perfect-10-for-repairability-190001687.html\" target=\"_blank\">Fairphone</a> launched a pair of <a class=\"link\" href=\"https://www.engadget.com/fairphone-launches-a-fully-repairable-set-of-over-ear-headphones-080017046.html\" target=\"_blank\">modular, fully-repairable headphones called the Fairbuds XL</a>. Now, the Dutch social enterprise is releasing an updated version where the focus isn\u2019t just on the qualit"
+    },
+    {
+        "id": "https://www.sciencefocus.com/science/the-closer-we-look-at-time-the-stranger-it-gets",
+        "title": "The closer we look at time, the stranger it gets",
+        "link": "https://www.sciencefocus.com/science/the-closer-we-look-at-time-the-stranger-it-gets",
+        "published": "Tue, 09 Dec 2025 06:01:57 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46201750\">Comments</a>"
     }
 ]
