📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -3046,5 +3046,69 @@
         "published": "Tue, 09 Dec 2025 06:01:57 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46201750\">Comments</a>"
+    },
+    {
+        "id": "https://gizmodo.com/more-parents-are-refusing-vitamin-k-for-their-newborns-heres-why-thats-a-bad-idea-2000696870",
+        "title": "More Parents Are Refusing Vitamin K for Their Newborns. Here\u2019s Why That\u2019s a Bad Idea",
+        "link": "https://gizmodo.com/more-parents-are-refusing-vitamin-k-for-their-newborns-heres-why-thats-a-bad-idea-2000696870",
+        "published": "Tue, 09 Dec 2025 09:00:29 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"Newborn\" class=\"attachment-full size-full wp-post-image\" height=\"1280\" src=\"https://gizmodo.com/app/uploads/2025/12/newborn.jpg\" width=\"1920\" /><br /><br />For around 60 years, doctors have routinely given infants a vitamin K shot to prevent uncontrolled bleeding."
+    },
+    {
+        "id": "https://mashable.com/article/dec-9-garmin-fenix-8-deal",
+        "title": "The Garmin f\u0113nix 8 just got a $350 discount at Amazon \u2013 its best-ever price",
+        "link": "https://mashable.com/article/dec-9-garmin-fenix-8-deal",
+        "published": "Tue, 09 Dec 2025 08:53:01 +0000",
+        "source": "Mashable",
+        "summary": "Save 29% on the Garmin f\u0113nix 8 at Amazon."
+    },
+    {
+        "id": "https://mashable.com/article/dec-9-hisense-qd7-deal",
+        "title": "This Hisense 75-inch QD7 TV deal is its lowest-ever price at Amazon",
+        "link": "https://mashable.com/article/dec-9-hisense-qd7-deal",
+        "published": "Tue, 09 Dec 2025 08:46:25 +0000",
+        "source": "Mashable",
+        "summary": "Save 25% on the Hisense 75-inch QD7 at Amazon."
+    },
+    {
+        "id": "https://mashable.com/article/dec-9-samsung-odyssey-g55c-deal",
+        "title": "The Samsung 32-Inch Odyssey G55C is back at its lowest-ever price at Amazon",
+        "link": "https://mashable.com/article/dec-9-samsung-odyssey-g55c-deal",
+        "published": "Tue, 09 Dec 2025 08:40:44 +0000",
+        "source": "Mashable",
+        "summary": "Save 39% on the Samsung 32-Inch Odyssey G55C at Amazon."
+    },
+    {
+        "id": "https://www.zdnet.com/article/best-blood-pressure-watch/",
+        "title": "Best blood pressure watches: I tested the top models that actually work",
+        "link": "https://www.zdnet.com/article/best-blood-pressure-watch/",
+        "published": "Tue, 09 Dec 2025 09:00:38 GMT",
+        "source": "Latest news",
+        "summary": "I tested some of the top blood pressure watches available, and considered medical research and current FDA guidance, to help you choose the best one for your needs."
+    },
+    {
+        "id": "https://www.zdnet.com/article/x-plus-storm-10-laptop-review/",
+        "title": "I converted this tiny laptop into a Linux work machine, and it shouldn't work this well",
+        "link": "https://www.zdnet.com/article/x-plus-storm-10-laptop-review/",
+        "published": "Tue, 09 Dec 2025 08:30:34 GMT",
+        "source": "Latest news",
+        "summary": "The X Plus Storm 10 laptop flies through demanding tasks and runs Linux seamlessly."
+    },
+    {
+        "id": "https://www.artificialintelligence-news.com/news/how-people-really-use-ai-the-surprising-truth-from-analysing-billions-of-interactions/",
+        "title": "How people really use AI: The surprising truth from\u00a0analysing\u00a0billions of interactions",
+        "link": "https://www.artificialintelligence-news.com/news/how-people-really-use-ai-the-surprising-truth-from-analysing-billions-of-interactions/",
+        "published": "Tue, 09 Dec 2025 09:00:00 +0000",
+        "source": "AI News",
+        "summary": "<p>For the past year, we&#8217;ve been told that artificial intelligence is&#160;revolutionising&#160;productivity\u2014helping us write emails, generate code, and summarise documents. But what if the reality of how people actually use AI is completely different from what we&#8217;ve been led to believe? A data-driven&#160;study&#160;by OpenRouter has just pulled back the curtain on real-world AI usage by&#160;analysing&#160;over 100 [&#8230;]</p>\n<p>The post <a href=\"https://www.artificialintelligen"
+    },
+    {
+        "id": "https://www.artificialintelligence-news.com/news/newsweek-building-ai-resilience-for-the-next-era-of-information/",
+        "title": "Newsweek: Building AI-resilience for the next era of information",
+        "link": "https://www.artificialintelligence-news.com/news/newsweek-building-ai-resilience-for-the-next-era-of-information/",
+        "published": "Tue, 09 Dec 2025 08:29:21 +0000",
+        "source": "AI News",
+        "summary": "<p>Artificial intelligence is transforming the way information is created, summarised, and delivered. For publishers, the shift is already visible. Search engines provide AI-generated overviews, users get answers without clicking, and content is scraped by large language models that train on decades of journalism. In this environment one question remains: How does a publisher survive when [&#8230;]</p>\n<p>The post <a href=\"https://www.artificialintelligence-news.com/news/newsweek-building-ai-res"
     }
 ]
