📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -3110,5 +3110,109 @@
         "published": "Tue, 09 Dec 2025 08:29:21 +0000",
         "source": "AI News",
         "summary": "<p>Artificial intelligence is transforming the way information is created, summarised, and delivered. For publishers, the shift is already visible. Search engines provide AI-generated overviews, users get answers without clicking, and content is scraped by large language models that train on decades of journalism. In this environment one question remains: How does a publisher survive when [&#8230;]</p>\n<p>The post <a href=\"https://www.artificialintelligence-news.com/news/newsweek-building-ai-res"
+    },
+    {
+        "id": "https://www.theverge.com/news/840547/google-zero-eu-antitrust-investigation-ai-content",
+        "title": "Google Zero is under investigation by the EU",
+        "link": "https://www.theverge.com/news/840547/google-zero-eu-antitrust-investigation-ai-content",
+        "published": "2025-12-09T05:12:39-05:00",
+        "source": "The Verge",
+        "summary": "Google is under investigation by the European Union over concerns that it breached competition rules by imposing restrictions on web publishers and YouTube creators to gain an unfair advantage over other AI companies. Concerns outlined by the European Commission include using content from web publishers for features like AI Overviews and AI Mode in Search, [&#8230;]"
+    },
+    {
+        "id": "https://www.engadget.com/apps/best-budgeting-apps-120036303.html?src=rss",
+        "title": "The best budgeting apps for 2025",
+        "link": "https://www.engadget.com/apps/best-budgeting-apps-120036303.html?src=rss",
+        "published": "Tue, 09 Dec 2025 10:00:36 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Over a year ago, I was prompted to look for another budgeting app. Intuit, parent company of Mint, the budgeting app I had been using for a long time, shut down the service in March 2024. The company encouraged Mint users to migrate to its other financial app, Credit Karma, but I found it to be a poor Mint replacement after trying it out. That sent me searching elsewhere to find an app to track all of my financial accounts, monitor my credit score, track spending and set goals like building a"
+    },
+    {
+        "id": "https://gizmodo.com/uber-targeting-for-ads-2000697042",
+        "title": "Uber Will Now Let Advertisers Target You Based on Your Movement and Delivery Data",
+        "link": "https://gizmodo.com/uber-targeting-for-ads-2000697042",
+        "published": "Tue, 09 Dec 2025 10:00:33 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"A person with only their hand visible using the Uber app to select a black SUV\" class=\"attachment-full size-full wp-post-image\" height=\"1000\" src=\"https://gizmodo.com/app/uploads/2025/12/uber-black-suv-in-app.jpg\" width=\"1500\" /><br /><br />I know what you're thinking: \"They weren't already doing this?\""
+    },
+    {
+        "id": "https://mashable.com/article/google-ai-glasses-2026",
+        "title": "Googles AI glasses are coming in 2026",
+        "link": "https://mashable.com/article/google-ai-glasses-2026",
+        "published": "Tue, 09 Dec 2025 09:51:50 +0000",
+        "source": "Mashable",
+        "summary": "Google is launching its new AI smart glasses next year."
+    },
+    {
+        "id": "https://mashable.com/article/australia-social-media-ban-instagram-facebook-tiktok-response",
+        "title": "Australias banning social media for kids this week. Heres how its being enforced.",
+        "link": "https://mashable.com/article/australia-social-media-ban-instagram-facebook-tiktok-response",
+        "published": "Tue, 09 Dec 2025 09:48:30 +0000",
+        "source": "Mashable",
+        "summary": "Here's how Facebook, TikTok, Instagram, Snapchat, X, and YouTube are responding to Australia's social media ban for children under 16."
+    },
+    {
+        "id": "https://mashable.com/article/nyt-mini-crossword-answers-hints-december-9-2025",
+        "title": "NYT Mini crossword answers, hints for December 9, 2025",
+        "link": "https://mashable.com/article/nyt-mini-crossword-answers-hints-december-9-2025",
+        "published": "Tue, 09 Dec 2025 09:29:20 +0000",
+        "source": "Mashable",
+        "summary": "Answers to each clue for the December 9, 2025 edition of NYT's The Mini crossword puzzle."
+    },
+    {
+        "id": "https://mashable.com/article/hurdle-hints-answers-december-9-2025",
+        "title": "Hurdle hints and answers for December 9, 2025",
+        "link": "https://mashable.com/article/hurdle-hints-answers-december-9-2025",
+        "published": "Tue, 09 Dec 2025 09:22:25 +0000",
+        "source": "Mashable",
+        "summary": "Hints and answers to today's Hurdle all in one place."
+    },
+    {
+        "id": "https://mashable.com/article/dec-9-mega-evolution-enhancewd-booster-box-deal",
+        "title": "Pok\u00e9mon TCGs Mega Evolution Enhanced Booster Box is over $20 cheaper on TCGPlayer, but Amazon offers a gift card",
+        "link": "https://mashable.com/article/dec-9-mega-evolution-enhancewd-booster-box-deal",
+        "published": "Tue, 09 Dec 2025 09:15:50 +0000",
+        "source": "Mashable",
+        "summary": "As of Dec. 9, Pok\u00e9mon TCG Mega Evolution Enhanced Booster Boxes are available on TCGplayer at prices that undercut Amazon by over $20, unless you can snag this gift card offer."
+    },
+    {
+        "id": "https://readwrite.com/sgla-sweepstakes-ban-loss-millions-new-york-revenue/",
+        "title": "SGLA critical of sweepstakes ban and loss of hundreds of millions to New York revenue",
+        "link": "https://readwrite.com/sgla-sweepstakes-ban-loss-millions-new-york-revenue/",
+        "published": "Tue, 09 Dec 2025 10:00:37 +0000",
+        "source": "ReadWrite",
+        "summary": "<div><img alt=\"A New York city skyline. SGLA critical of sweepstakes ban and loss of hundreds of millions to New York revenue\" class=\"attachment-medium size-medium wp-post-image\" height=\"200\" src=\"https://readwrite.com/wp-content/uploads/2025/12/SGLA-critical-of-sweepstakes-ban-and-loss-of-hundreds-of-millions-to-New-York-revenue-300x200.jpg\" style=\"width: 100%; height: 66.67%; margin-bottom: 15px;\" width=\"300\" /></div>\n<p>The Social Gaming Leadership Alliance (SGLA) has criticized the recent ba"
+    },
+    {
+        "id": "https://readwrite.com/nba-star-terry-rozier-pleads-not-guilty-3m-bail/",
+        "title": "NBA\u2019s Terry Rozier pleads not guilty, released on $3 million bail",
+        "link": "https://readwrite.com/nba-star-terry-rozier-pleads-not-guilty-3m-bail/",
+        "published": "Tue, 09 Dec 2025 09:48:22 +0000",
+        "source": "ReadWrite",
+        "summary": "<div><img alt=\"Miami Heat guard Terry Rozier &#039;arrested by FBI&#039; amid illegal gambling probe as career earnings top $160M. The NBA has issued an urgent memo to all 30 teams stressing that \u201cmore can be done\u201d to protect the integrity of the game, following the gambling scandal that has rocked the league. Rozier has now plead not guilty and has been released on bail. A basketball player in a green Boston Celtics uniform, wearing number 12, drives to the basket for a layup during a game agai"
+    },
+    {
+        "id": "https://www.zdnet.com/article/best-note-taking-tablet/",
+        "title": "Best tablets for note-taking 2025: Expert tested and reviewed",
+        "link": "https://www.zdnet.com/article/best-note-taking-tablet/",
+        "published": "Tue, 09 Dec 2025 10:00:39 GMT",
+        "source": "Latest news",
+        "summary": "We've tested and reviewed the best tablets on the market for note-taking in study sessions, meetings, or when you're feeling creative."
+    },
+    {
+        "id": "https://www.w3.org/WAI/ARIA/apg/practices/read-me-first/",
+        "title": "No ARIA is better than bad ARIA",
+        "link": "https://www.w3.org/WAI/ARIA/apg/practices/read-me-first/",
+        "published": "Wed, 03 Dec 2025 08:39:12 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46131837\">Comments</a>"
+    },
+    {
+        "id": "https://github.com/ziggy42/epsilon",
+        "title": "Epsilon: A WASM virtual machine written in Go",
+        "link": "https://github.com/ziggy42/epsilon",
+        "published": "Mon, 01 Dec 2025 01:12:03 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46102311\">Comments</a>"
     }
 ]
